--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8"
         <body>
+            <title>Tasty Fish Tacos</title>
             <h1>Odin Recipes</h1>
+            <p>Ever since I've learned to cook, I've always tried to find the easiest, most effective foods to cook for weeknights. These fish tacos are cost effective 
+                and great eating!</p>
         </body>
     </head>
+</html>
