--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8"
         <body>
             <title>Tasty Fish Tacos</title>
+            
             <h1>Odin Recipes</h1>
+            <img src="image.jpg/fishtaco.jpeg"
             <p>Ever since I've learned to cook, I've always tried to find the easiest, most effective foods to cook for weeknights. These fish tacos are cost effective 
                 and great eating!</p>
-        </body>
+                <a href="recipes/fish-tacos.html">fish taco recipe</a>
+         </body>
     </head>
 </html>
