--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,7 +9,7 @@
             <img src="image.jpg/fishtaco.jpeg"
             <p>Ever since I've learned to cook, I've always tried to find the easiest, most effective foods to cook for weeknights. These fish tacos are cost effective 
                 and great eating!</p>
-                <a href="../fish-tacos.html">fish taco recipe</a>
+                <a href="fish-tacos.html">fish taco recipe</a>
          </body>
     </head>
 </html>
