added alt for picture

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,6 +7,8 @@
             
             <h1>Odin Recipes</h1>
             <img src="image.jpg/fishtaco.jpeg"
+            alt="Pic of awesome looking fish tacos">
+          
             <p>Ever since I've learned to cook, I've always tried to find the easiest, most effective foods to cook for weeknights. These fish tacos are cost effective 
                 and great eating!</p>
                 <a href="fish-tacos.html">fish taco recipe</a>
