--- a/recipes/index.html
+++ b/recipes/index.html
@@ -6,12 +6,9 @@
             <title>Tasty Fish Tacos</title>
             
             <h1>Odin Recipes</h1>
-            <img src="image.jpg/fishtaco.jpeg"
-            alt="Pic of awesome looking fish tacos">
-          
-            <p>Ever since I've learned to cook, I've always tried to find the easiest, most effective foods to cook for weeknights. These fish tacos are cost effective 
-                and great eating!</p>
-                <a href="fish-tacos.html">fish taco recipe</a>
-         </body>
-    </head>
-</html>
+            <img src="images.jpeg/fishtaco.jpeg">
+            <ul>
+              <li> <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53296/easy-fish-taco-recipe/">Fish Tacos</a></li>
+              <li> <a href="https://butteryourbiscuit.com/fire-roasted-salsa/">Fire roasted salsa</a></li>
+              <li> <a href="https://healthyfitnessmeals.com/cilantro-lime-chicken-and-rice-recipe/">Cilantro lime chicken and rice</a></li>
+            </ul>
