--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,7 +8,7 @@
             <h1>Odin Recipes</h1>
             <img src="images.jpeg/fishtaco.jpeg">
             <ul>
-              <li> <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53296/easy-fish-taco-recipe/">Fish Tacos</a></li>
-              <li> <a href="https://butteryourbiscuit.com/fire-roasted-salsa/">Fire roasted salsa</a></li>
-              <li> <a href="https://healthyfitnessmeals.com/cilantro-lime-chicken-and-rice-recipe/">Cilantro lime chicken and rice</a></li>
+              <li> <a href="fish-tacos.html">Fish Tacos</a></li>
+              <li> <a href="fire-roasted-salsa.html">Fire roasted salsa</a></li>
+              <li> <a href="cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
             </ul>
