made functional pages

--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -1,2 +1,10 @@
-   
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+  </head>
+    <body>
+        <img src="images.jpeg/fire-roasted-salsa.jpeg">
+        <h2>Fire Roasted Salsa</h2>
+    </body>
+</html>
