--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-  </head>
-    <body>
-      <img src="images.jpeg/fishtaco.jpeg"
-        <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53296/easy-fish-taco-recipe/">Check out this cool recipe</a>
-    </body>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+    </head>
+      <body>
+        <img src="images.jpeg/fishtaco.jpeg"
+        <h2>Awesome</h2>
+      </body>
     
-</html>
+  </html>
