--- a/recipes/cilantro-lime-chicken-and-rice.html
+++ b/recipes/cilantro-lime-chicken-and-rice.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-  <html lang="en"
+  <html lang="en">
     <head>
-        <meta charset="UTF-8"
-        <body>
-            <title>Cilantro Lime Chicken and Rice</title>
-            <img src="images.jpeg/cilantro-lime-chicken-and-rice.jpeg"
-            <h2>Cilantro Lime Chicken And Rice</h2>
-        </body>
+      <meta charset="UTF-8">
     </head>
-</html>
+    <body>
+        <img src="images.jpeg/cilantro-lime-chicken-and-rice.jpeg">
+        <h2>Cilantro Lime Chicken and Rice</h2>
+    </body>
+            
