--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -3,9 +3,9 @@
     <head>
       <meta charset="UTF-8">
     </head>
+      <title>Awesome Fish Tacos</title>
       <body>
-        <img src="images.jpeg/fishtaco.jpeg"
-        <h2>Awesome</h2>
+        <img src="images.jpeg/fishtaco.jpeg">
+        <h2>Awesome Fish Tacos</h2>
       </body>
-    
-  </html>
+    </html>
