--- a/recipes/index.html
+++ b/recipes/index.html
@@ -12,3 +12,6 @@
               <li> <a href="fire-roasted-salsa.html">Fire roasted salsa</a></li>
               <li> <a href="cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
             </ul>
+        </body>
+      </head>
+  </html>
