Cilantro lime cooking steps completed

--- a/recipes/cilantro-lime-chicken-and-rice.html
+++ b/recipes/cilantro-lime-chicken-and-rice.html
@@ -3,8 +3,61 @@
     <head>
       <meta charset="UTF-8">
     </head>
+     <title>Cilantro Lime Chicken and Rice</title>
     <body>
+      <h1>Cilantro Lime Chicken and Rice</h1>
         <img src="images.jpeg/cilantro-lime-chicken-and-rice.jpeg">
-        <h2>Cilantro Lime Chicken and Rice</h2>
-    </body>
-            
+        <h2>Description</h2>
+        <p>This recipe is one that my wife and I make super often on weeknights because of how easy of 
+          a meal it is. It doesn't make too much of a mess and is a great healthy meal for losing weight,
+          or as a comfort meal because of how delicious it is!</p>
+        <h3>For the chicken</h3>
+         <ul>
+          <li>1lb chicken breast or thigh</li>
+          <li>1.5tbsp. salt</li>
+          <li>1tbsp. pepper</li>
+          <li>.5tbsp. cumin</li>
+          <li>.5tbsp. cayenne pepper</li>
+          <li>.5tbsp. garlic powder</li>
+          <li>.5tbsp. onion powder</li>
+           <p>You'll want to mix these in a bowl altogether well before we season our chicken.</p>
+          </ul>
+        <h3>For the sauce</h3>
+         <ul>
+          <li>2 ripe avocados</li>
+          <li>1 bundle of cilantro</li>
+          <li>1tbsp. salt</li>
+          <li>.5tbsp. pepper</li>
+          <li>garlic powder to taste</li>
+          <li>half a cup of sour cream (sub greek yogurt to keep it healthy!)</li>
+          <li>.5tbsp. cumin</li>
+          <li>.25 cups of water</li>
+         </ul>
+          <h3>For the Rice</h3>
+           <ul>
+            <li>1.5 cups Rice</li>
+            <li>3 cups chicken broth</li>
+           </ul>
+        <h3>Lets get cooking!</h3>
+          <ol>
+            <li>On the back left burner, take a medium sized pot and add your 1.5 cups of rice(I always rinse mine before I cook it)</li>
+            <li>Add in your chicken broth and bring to a simmer, then put a lid on the pot and let cook for about 10 minutes.</li>
+            <li>On your stove, set the front right (the one you should always be cooking with anyways, duh!) on medium-high heat. pre-heat 
+            a pan while we prep our chicken.</li>
+            <li>Next, we'll take our thawed chicken out of the package. place it on a cutting board, pan, etc and pat dry with a paper towel. 
+              lightly coat all around with olive oil and add your seasonings. Don't be scared to make sure it's coated well.</li>
+            <li>After we've seasoned our chicken, we'll want to add some olive oil to our pan. add just enough so that the bottom of the pan is 
+              coated. toss the chicken into the pan and let cook for about 5 minutes a side, or until a nice crust has formed on the bottom. Flip
+              your chicken as needed until cooked to an internal temp of 165 degrees fahrenheit, then set aside. turn your heat down to low when
+              you remove the chicken.</li>
+              <li> Now we'll start on our sauce. in a blender, add the 2 avocados, sour cream, and seasoning, along with about a quarter cup of
+                water.</li>
+              <li>Add the lid to the blender and blend until smooth. you don't want any avocado chunks in your sauce.</li>
+              <li>Back on the cutting board, dice your chicken to your desired cubes.</li>
+              <li>Add your chicken back to the pan while the heat is on low, then pour your sauce from the blender in with it.</li>
+              <li>Let this simmer for about five  minutes on low while stirring every once in a while. we want to get the seasoning cooked 
+                into the pan off of it and incorporated into the sauce.</li>
+              <li>Once your chicken is done simmering, grab a bowl and scoop some rice into it. Then, add your cilantro-lime chicken with sauce
+                and enjoy!
+              </li>
+          </ol>
