--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8">
   </head>
     <body>
+      <h1>Fire Roasted Salsa</h1>
         <img src="images.jpeg/fire-roasted-salsa.jpeg">
-        <h2>Fire Roasted Salsa</h2>
-    </body>
+      <h2>Description</h2>
+      <p>This is my go to appetizer when I barbecue because I already have a fire going for it, and it brings out so many different
+      flavors. It's a great way to make a distinguished salsa that will have people begging for your recipe! Recipe by Colton Shirley</p>
+      <h3>Things You'll Need</h3>
+      <ul>
+        <li>5 to 6 Roma tomatoes</li>
+        <li>1 white onion</li>
+        <li>1 bundle of Cilantro</li>
+        <li>3 Jalapenos</li>
+        <li>1 Bell pepper</li>
+        <li>1 Anaheim pepper</li>
+        <li>1 1/2tbsp. Salt</li>
+        <li>1tbsp. Black pepper</li>
+        <li>3/4tbsp. Cumin</li>
+        <li>1tbsp. Garlic powder</li>
+        <li>1/2tbsp. Olive oil</li>
+      </ul>
 </html>
