Add steps to recipe

--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -22,5 +22,21 @@
         <li>3/4tbsp. Cumin</li>
         <li>1tbsp. Garlic powder</li>
         <li>1/2tbsp. Olive oil</li>
+        <li>1/2 Cup of vinegar</li>
       </ul>
+      <h3>Let's Get Cookin'</h3>
+      <ol>
+        <li>The first thing we'll need to do is either build a fire or start your gas grill. I don't recommend using this recipe on a stove.</li>
+        <li>After we have a fire going, we'll need to prep our veggies for cooking. Take your white onion and remove the first layer of skin, 
+          then cut the eye and the root of the onion off. after that, cut the onion in half.</li>
+        <li>Before grilling, I like to wash my tomatoes. start come cold water and put your tomatoes in a bowl. Add about 2 cups of water from tap 
+            to your bowl of tomatoes and then add your half cup of vinegar.</li>
+        <li>Now we should be ready to get these on the grill! Throw the onion, tomatoes, jalapenos, bell pepper and Anaheim pepper on the grill. 
+          cook the onions until lightly browned. The Anaheim pepper, bell pepper and jalapenos should get a nice char on the skin before it needs
+           to be removed from heat. Cook the tomatoes until the skin begins to separate.</li>
+        <li>Now that our vegetables are done cooking, we're ready to prep for the food processor/blender. On a cutting board, put your bell pepper,
+          Anaheim pepper and jalapenos. cut the tops of the jalapenos off and squeeze the seeds out of 2 of the 3. Do the same to the Anaheim pepper,
+          and cut the top off the bell pepper and take the core out.</li>
+        
+      </ol>
 </html>
