salsa page complete

--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -37,6 +37,10 @@
         <li>Now that our vegetables are done cooking, we're ready to prep for the food processor/blender. On a cutting board, put your bell pepper,
           Anaheim pepper and jalapenos. cut the tops of the jalapenos off and squeeze the seeds out of 2 of the 3. Do the same to the Anaheim pepper,
           and cut the top off the bell pepper and take the core out.</li>
-        
+        <li>Add the onion, bell pepper, Anaheim pepper, jalapenos and tomatoes to your blender. Pulse the blender intermittently for about a minute,
+          until you have some decent chunks in the mix.</li>
+        <li>Next, throw in you cilantro and spices. go back to pulsing the blender until you have a nice chunky salsa and taste test to make sure it's 
+          the right consistency for you.</li>
+          <li>Once everything is how you like it, pour it into a bowl and Enjoy! be sure to serve it warm for the best flavor!</li>
       </ol>
 </html>
