--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -24,7 +24,7 @@
         <li>1/2tbsp. Olive oil</li>
         <li>1/2 Cup of vinegar</li>
       </ul>
-      <h3>Let's Get Cookin'</h3>
+      <h3>Let's Get Cooking</h3>
       <ol>
         <li>The first thing we'll need to do is either build a fire or start your gas grill. I don't recommend using this recipe on a stove.</li>
         <li>After we have a fire going, we'll need to prep our veggies for cooking. Take your white onion and remove the first layer of skin, 
