--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <h1>Odin Recipes</h1>
             
             <ul>
-              <li> <a href="fish-tacos.html">Fish Tacos</a></li>
-              <li> <a href="fire-roasted-salsa.html">Fire roasted salsa</a></li>
-              <li> <a href="cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
+              <li> <a href="recipes/fish-tacos.html">Fish Tacos</a></li>
+              <li> <a href="recipes/fire-roasted-salsa.html">Fire roasted salsa</a></li>
+              <li> <a href="recipes/cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
             </ul>
         </body>
       </head>
