--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"
         <body>
-            <title>Tasty Fish Tacos</title>
+            <title>Odin Recipes</title>
             
             <h1>Odin Recipes</h1>
             
