--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
     </head>
-      <title>Awesome Fish Tacos</title>
+      <title>Fish Tacos</title>
       <body>
         <h1>Fish Tacos</h1>
         <img src="../images.jpeg/fishtaco.jpeg">
