repair broken image

--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -6,7 +6,7 @@
       <title>Fish Tacos</title>
       <body>
         <h1>Fish Tacos</h1>
-        <img src="../images.jpeg/fishtaco.jpeg">
+        <img src="images.jpeg/fishtaco.jpeg">
         <h2>Description</h2>
         <p>This is one of my easy go to meals because of how amazing they always turn out. My wife and I have these at
            least once a week because of how easy they are to make and how little clean up we have to do!</p>
