--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8"
         <body>
             <title>Odin-Recipes</title>
-            
+            <link rel="stylesheet" href="styles.css">
             <h1>Odin Recipes</h1>
-            
-            <ul>
+            <img src="images.jpeg/chefs-kiss.gif">
+            <ul class="list">
               <li> <a href="recipes/fish-tacos.html">Fish Tacos</a></li>
               <li> <a href="recipes/fire-roasted-salsa.html">Fire roasted salsa</a></li>
               <li> <a href="recipes/cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
