add style sheet to all pages

--- a/recipes/cilantro-lime-chicken-and-rice.html
+++ b/recipes/cilantro-lime-chicken-and-rice.html
@@ -2,8 +2,10 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8">
-    </head>
      <title>Cilantro Lime Chicken and Rice</title>
+     <link href="../styles.css" rel="stylesheet">
+     </head>
+     
     <body>
       <h1>Cilantro Lime Chicken and Rice</h1>
         <img src="../images.jpeg/Cilantro-Lime-Chicken.jpeg">
@@ -61,3 +63,4 @@
                 and enjoy!
               </li>
           </ol>
+        </body>
