--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-  </head>
+    <title>Fire Roasted Salsa</title>
+    <link href="../styles.css" rel="stylesheet">
+   </head>
     <body>
-      <h1>Fire Roasted Salsa</h1>
         <img src="../images.jpeg/fire-roasted-salsa.jpeg">
       <h2>Description</h2>
       <p>This is my go to appetizer when I barbecue because I already have a fire going for it, and it brings out so many different
       flavors. It's a great way to make a distinguished salsa that will have people begging for your recipe! Recipe by Colton Shirley</p>
       <h3>Things You'll Need</h3>
-      <ul>
+      <ul class="list">
         <li>5 to 6 Roma tomatoes</li>
         <li>1 white onion</li>
         <li>1 bundle of Cilantro</li>
