--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <meta charset="UTF-8">
+      <meta charset="UTF-8"> 
+      <title class="fish-tacos">Fish Tacos</title>
+      <link href="../styles.css" rel="stylesheet">
     </head>
-      <title>Fish Tacos</title>
       <body>
         <h1>Fish Tacos</h1>
         <img src="../images.jpeg/fishtaco.jpeg">
@@ -11,7 +12,7 @@
         <p>This is one of my easy go to meals because of how amazing they always turn out. My wife and I have these at
            least once a week because of how easy they are to make and how little clean up we have to do!</p>
            <h2>Things You'll Need</h2>
-           <ul>
+           <ul class="list">
             <li>1lb. Tilapia</li>
             <li>Slap Ya Mama seasoning</li>
             <li>Your favorite blackened seasoning</li>
