--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <html lang="en"
     <head>
         <meta charset="UTF-8"
-        <body>
             <title>Odin-Recipes</title>
-            <link rel="stylesheet" href="styles.css">
+            <link href="styles.css" rel="stylesheet"
+        </head>
+        <body>
+      
             <h1>Odin Recipes</h1>
             <img src="images.jpeg/chefs-kiss.gif">
             <ul class="list">
@@ -13,5 +15,4 @@
               <li> <a href="recipes/cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
             </ul>
         </body>
-      </head>
   </html>
