--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8"
             <title>Odin-Recipes</title>
             <link href="styles.css" rel="stylesheet"
-        </head>
+    </head>
         <body>
       
             <h1>Odin Recipes</h1>
             <img src="images.jpeg/chefs-kiss.gif">
-            <ul class="list">
+            <ul class="unlist">
               <li> <a href="recipes/fish-tacos.html">Fish Tacos</a></li>
               <li> <a href="recipes/fire-roasted-salsa.html">Fire roasted salsa</a></li>
               <li> <a href="recipes/cilantro-lime-chicken-and-rice.html">Cilantro lime chicken and rice</a></li>
