--- a/recipes/cilantro-lime-chicken-and-rice.html
+++ b/recipes/cilantro-lime-chicken-and-rice.html
@@ -9,12 +9,12 @@
     <body>
       <h1>Cilantro Lime Chicken and Rice</h1>
         <img src="../images.jpeg/Cilantro-Lime-Chicken.jpeg">
-        <h2>Description</h2>
+        <h2 div id="h2">Description</h2>
         <p>This recipe is one that my wife and I make super often on weeknights because of how easy of 
           a meal it is. It doesn't make too much of a mess and is a great healthy meal for losing weight,
           or as a comfort meal because of how delicious it is!</p>
-        <h3>For the chicken</h3>
-         <ul>
+        <h3 div id="h3">For the chicken</h3>
+         <ul class="unlist">
           <li>1lb chicken breast or thigh</li>
           <li>1 1/2tbsp. salt</li>
           <li>1tbsp. pepper</li>
@@ -24,8 +24,8 @@
           <li>1/2tbsp. onion powder</li>
            <p>You'll want to mix these in a bowl altogether well before we season our chicken.</p>
           </ul>
-        <h3>For the sauce</h3>
-         <ul>
+        <h3 div id="h3">For the sauce</h3>
+         <ul class="unlist">
           <li>2 ripe avocados</li>
           <li>1 bundle of cilantro</li>
           <li>1tbsp. salt</li>
@@ -35,13 +35,13 @@
           <li>1/2tbsp. cumin</li>
           <li>1/2 cups of water</li>
          </ul>
-          <h3>For the Rice</h3>
+          <h3 div id="h3">For the Rice</h3>
            <ul>
             <li>1 1/2 cups Rice</li>
             <li>3 cups chicken broth</li>
            </ul>
-        <h3>Lets get cooking!</h3>
-          <ol>
+        <h3 div id="h3">Lets get cooking!</h3>
+          <ol class="ollist">
             <li>On the back left burner, take a medium sized pot and add your 1.5 cups of rice(I always rinse mine before I cook it)</li>
             <li>Add in your chicken broth and bring to a simmer, then put a lid on the pot and let cook for about 10 minutes.</li>
             <li>On your stove, set the front right (the one you should always be cooking with anyways, duh!) on medium-high heat. Pre-heat 
