--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -7,11 +7,11 @@
    </head>
     <body>
         <img src="../images.jpeg/fire-roasted-salsa.jpeg">
-      <h2>Description</h2>
+      <h2 div id="h2">Description</h2>
       <p>This is my go to appetizer when I barbecue because I already have a fire going for it, and it brings out so many different
       flavors. It's a great way to make a distinguished salsa that will have people begging for your recipe! Recipe by Colton Shirley</p>
-      <h3>Things You'll Need</h3>
-      <ul class="list">
+      <h3 div id="h3">Things You'll Need</h3>
+      <ul class="unlist">
         <li>5 to 6 Roma tomatoes</li>
         <li>1 white onion</li>
         <li>1 bundle of Cilantro</li>
@@ -25,8 +25,8 @@
         <li>1/2tbsp. Olive oil</li>
         <li>1/2 Cup of vinegar</li>
       </ul>
-      <h3>Let's Get Cooking</h3>
-      <ol>
+      <h3 div id="h3">Let's Get Cooking</h3>
+      <ol class="ollist">
         <li>The first thing we'll need to do is either build a fire or start your gas grill. I don't recommend using this recipe on a stove.</li>
         <li>After we have a fire going, we'll need to prep our veggies for cooking. Take your white onion and remove the first layer of skin, 
           then cut the eye and the root of the onion off. after that, cut the onion in half.</li>
