--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -6,13 +6,13 @@
       <link href="../styles.css" rel="stylesheet">
     </head>
       <body>
-        <h1>Fish Tacos</h1>
+        <h1div id="h1">Fish Tacos</h1>
         <img src="../images.jpeg/fishtaco.jpeg">
-        <h2>Description</h2>
+        <h2 div id="h2">Description</h2>
         <p>This is one of my easy go to meals because of how amazing they always turn out. My wife and I have these at
            least once a week because of how easy they are to make and how little clean up we have to do!</p>
-           <h2>Things You'll Need</h2>
-           <ul class="list">
+           <h2 div id="h2">Things You'll Need</h2>
+           <ul class="unlist">
             <li>1lb. Tilapia</li>
             <li>Slap Ya Mama seasoning</li>
             <li>Your favorite blackened seasoning</li>
@@ -21,8 +21,8 @@
             <li>Corn Tortillas</li>
             <li>Pickled Red Onions (optional)</li>
            </ul>
-        <h2>Let's Make It</h2>
-         <ol>
+        <h2 div id="h2">Let's Make It</h2>
+         <ol class="ollist">
           <li>First, Take your thawed Tilapia and place it on a cutting board or pan with foil. Lightly pat dry and 
           coat with thin film of olive oil.</li>
           <li>Next, take your blackened seasoning and liberally coat both sides of te fish. After you've gone over
