--- a/recipes/fire-roasted-salsa.html
+++ b/recipes/fire-roasted-salsa.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fire Roasted Salsa</title>
+    <title class="fire-roasted-salsa">Fire Roasted Salsa</title>
     <link href="../styles.css" rel="stylesheet">
    </head>
     <body>
+      <h1 div id="h1">Fire Roasted Salsa</h1>
         <img src="../images.jpeg/fire-roasted-salsa.jpeg">
       <h2 div id="h2">Description</h2>
       <p>This is my go to appetizer when I barbecue because I already have a fire going for it, and it brings out so many different
