--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -6,12 +6,12 @@
       <link href="../styles.css" rel="stylesheet">
     </head>
       <body>
-        <h1div id="h1">Fish Tacos</h1>
+        <h1 div id="h1">Fish Tacos</h1>
         <img src="../images.jpeg/fishtaco.jpeg">
-        <h2 div id="h2">Description</h2>
+        <h3 div id="h3">Description</h3>
         <p>This is one of my easy go to meals because of how amazing they always turn out. My wife and I have these at
            least once a week because of how easy they are to make and how little clean up we have to do!</p>
-           <h2 div id="h2">Things You'll Need</h2>
+           <h3 div id="h3">Things You'll Need</h3>
            <ul class="unlist">
             <li>1lb. Tilapia</li>
             <li>Slap Ya Mama seasoning</li>
@@ -21,11 +21,11 @@
             <li>Corn Tortillas</li>
             <li>Pickled Red Onions (optional)</li>
            </ul>
-        <h2 div id="h2">Let's Make It</h2>
+        <h3 div id="h3">Let's Make It</h3>
          <ol class="ollist">
           <li>First, Take your thawed Tilapia and place it on a cutting board or pan with foil. Lightly pat dry and 
           coat with thin film of olive oil.</li>
-          <li>Next, take your blackened seasoning and liberally coat both sides of te fish. After you've gone over
+          <li>Next, take your blackened seasoning and liberally coat both sides of the fish. After you've gone over
           it with the blackened seasoning, go over it again with the Slap Ya Mama seasoning.</li>
           <li>Take a pan and place it on your cook top over medium high heat. add a little bit of olive oil to the 
             pan to coat it before adding your fish.</li>
